fix review background z-index

--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ article {
     box-shadow: 0 3px 10px -1px rgb(210, 210, 169), 0 5px 20px -2px rgb(154, 77, 77);
 }
 
-.reviewContainer::after{
+.reviewContainer:after{
     content:'';
     background-image: url("images/reviewBG.png");
 
@@ -29,6 +29,7 @@ article {
     width:100%;
     height:100%;
     opacity: 0.3;
+    z-index: -1;
     
     background-attachment: fixed;
     background-position: center;
